FIX: wrong width while collapsing
Well, I'm kind of compensating for the negative margin of the left column or something...

--- a/main/static/main/css/aqhj.css
+++ b/main/static/main/css/aqhj.css
@@ -489,3 +489,6 @@ body {
 .winner h4 {
     font-weight: bold;
 }
+#following-matches {
+    margin-top: 1px;
+}
